kubernetes/greyrock-ops/apps/vpn/pod-gateway/selfhosted/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: selfhosted-gateway-pod-gateway
  namespace: vpn
  labels:
    app.kubernetes.io/instance: selfhosted-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: selfhosted-gateway
      app.kubernetes.io/name: pod-gateway

  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "65142"
              protocol: UDP
    - toEntities:
        - cluster
